# rbdyn

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/fixedBase/: CMakeLists.txt
examples/fixedBase/include/: main.hpp
examples/fixedBase/rsc/: 1dof.urdf  1dof2.urdf
examples/fixedBase/src/: main.cpp
examples/floatingBase/: CMakeLists.txt
examples/floatingBase/Log/: rbdynLog.txt  rs1Log.txt  rs2Log.txt
examples/floatingBase/include/: main.hpp
examples/floatingBase/rsc/: 1dof_2.urdf  1dof_float2.urdf
examples/floatingBase/src/: main.cpp
examples/go2/: CMakeLists.txt
examples/go2/Log/: rbdynLog.txt  rs1Log.txt  test.txt
examples/go2/include/: main.hpp  main_dyn.hpp  main_dyn_gazebo.hpp
examples/go2/src/: main.cpp  main_dyn.cpp  main_dyn_gazebo.cpp
examples/kinematicTests/: CMakeLists.txt
examples/kinematicTests/include/: main.hpp  main_float.hpp  main_quadruped.hpp
examples/kinematicTests/rsc/: 1dof.urdf  1dof2.urdf  1dof_float.urdf
examples/kinematicTests/src/: main.cpp  main_float.cpp  main_quadruped.cpp
examples/kinematicsTests/: CMakeLists.txt
examples/kinematicsTests/include/: main.hpp
examples/kinematicsTests/src/: main.cpp
examples/quadruped/: CMakeLists.txt
examples/quadruped/Log/: rbdynLog.txt  rs1Log.txt  rs2Log.txt
examples/quadruped/include/: main.hpp
examples/quadruped/rsc/mesh/: thigh_L.stl
examples/quadruped/rsc/mesh2/: actuator2.stl  foot.dae  foot.stl  foot_link.dae  foot_link.stl  link_d0.dae  link_d0.stl  shank.dae  thigh_L.dae  thigh_R.dae  torso.dae  torso.stl
examples/quadruped/rsc/urdf/: quadruped.urdf  quadruped1.urdf  quadruped2.urdf  tekir3mesh.urdf  tekir3mesh_new.urdf  tekir3mesh_new_V2.urdf  tekir3mesh_new_V2_1.urdf  tekir3mesh_new_V2copy.urdf
examples/quadruped/src/: main.cpp
examples/rsc/fixedBase/: 1dof.urdf  1dof2.urdf
examples/rsc/floatingBase/: 1dof_float2.urdf
examples/rsc/go2/urdf/: go2.urdf  go2_1.urdf  go2_2.urdf  go2_gazebo.urdf
examples/rsc/quadruped/mesh/: actuator_hip_fe.stl  foot.stl  shank.stl  thigh_R.stl
examples/rsc/quadruped/urdf/: quadruped2.urdf
include/: Dynamics.hpp  Kinematics.hpp  RigidBodyModel.hpp  Spatial.hpp  SpatialInertia.hpp  modelParameters.hpp  orientTools.hpp  spatialTypes.hpp
src/: Dynamics.cpp  Kinematics.cpp  Spatial.cpp  SpatialInertia.cpp  orientTools.cpp
